[build-system] 
requires = ["setuptools", "wheel"] 
build-backend = "setuptools.build_meta" 

[project] 
name = "tradeguard" 
version = "0.1.0" 
description = "Agentic wash trading detection environment" 
requires-python = ">=3.9" 
dependencies = [ 
    "pydantic", 
    "openai", 
    "openenv-core", 
    "PyYAML", 
    "fastapi", 
    "uvicorn" 
] 

[project.scripts] 
server = "server.app:main" 
